@@ -1,4 +1,5 @@
 CHANGES
+CREDITS
 BUGS
 INSTALL
 README
