@@ -14,15 +14,16 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 
 SHA1 70d6187d0152848c922dc4360fa6dd3a3dc35c62 BUGS
-SHA1 62077e45a03df96aacfcd2538f7cea6e6c658388 CHANGES
-SHA1 a7c1e085fd6237ba6ed2244b5584992421e921a1 GMP.xs
+SHA1 e35204291c5ac040cad59b9a024b16328f53099b CHANGES
+SHA1 35a46eadc5301fb75c969d895619257a7652262a CREDITS
+SHA1 71b30e76484e11eb6fe0f9ca9a33f7a895c50bd7 GMP.xs
 SHA1 e779295d75ce92040a22da5fccccd54c0884df3d INSTALL
 SHA1 d6a6c30ee6d9ba6b9afab8bbf6a25e1b23c744e0 LICENSE
-SHA1 a3ccab809822544e47cf1e802c248f43f103db5f MANIFEST
+SHA1 e815f1584ea6e03222d8e17ddc355964dac46a1a MANIFEST
 SHA1 479834beb66ef7bd007bf3fcea9a61cbd1fd8da5 Makefile.PL
 SHA1 836ebb7475ffe1a62c01e300e8d1527573822742 README
-SHA1 9ed580e2b519761f71796f2f72b6eaeef6435b05 TODO
-SHA1 74dc9f9697564f1b63ac1f253a417475bcb153d7 lib/Math/BigInt/GMP.pm
+SHA1 42794ba77f0fc4d6381ff2b267f4cfa7ab04d905 TODO
+SHA1 7a4b878069e3b542c0c6de6fa1873877d25bff60 lib/Math/BigInt/GMP.pm
 SHA1 236ed86927358014ccdaba4229e98d4f23c151b0 t/bigfltpm.inc
 SHA1 0cc2d653edf09c7ab3a13e2f55b9265093526995 t/bigfltpm.t
 SHA1 d32b6790795473734333cdffdd4c9177f97fd017 t/bigintg.t
@@ -33,11 +34,11 @@ SHA1 f7aad87c0a30330d474f4fb45f6d1953d6701d2f typemap
 Version: GnuPG v1.0.6 (GNU/Linux)
 Comment: When cryptography is outlawed, bayl bhgynjf jvyy unir cevinpl.
 
-iQEVAwUBPgjUbHcLPEOTuEwVAQHlFgf/Ro7H9xd3CSkeDvJkfnkwESY/hieSNggd
-TY7k42eTZfmTmD2+lrP1G+WJJMj26yFE85ICIKtQHZ75FjAEDoykxc85MDR30kC9
-8uq8lps8Srj8Ck1Q+jG2Dol5dfH5BPBtiUxOl4FutxvmVdcwRz4HNe8vazrwSrPS
-I/IVHgRTrzc1Dhf/w9oKBYlmQVa5TpTmSTORBTdjgKv7PImbG5+sbfds4qLlew3z
-gXeyCcwuX2TdZZAL4ujPC7P55CpaVGXwkIlOXeTpk3RVuZwZZmSi5rDb/BBhHZ5v
-SZRF3d2yuJ2O7RTJn2al5qqIyhu1tLOC0R3FU7LOhfVtnbCGqFSnww==
-=UsOL
+iQEVAwUBPhLrVHcLPEOTuEwVAQG3eAf/TTYCGfMJmkpiJ9SyaERha6iuEHqt6cB/
+o3QA2CgNTbgR3YuWWPMgV91VDEDrcA2Fe2oTAguwGYDYxxtPxQSRmTrPr4xdA2ig
+nqPMZfYb/5iDyL2PwQ/BvU9mlp2FVcUFdJxZjklNcHMBZxGzlVZjt214oLloCy0U
+PlZNuuaf+0rvblgYM15zWYJl1vant5g3wzfh7dwGm/YJPMhSwPIXCtcLEo2uTTcW
+5nHMCotQiz3yy9yv9YUSz0wR09m1YbhYUH9uW9LmmIMuKH7tOZMfhembF3K4fdnL
+zAiEJ+Ibe1TzLRiL3+Z/Hg3+au/F2cIY8zGrSEBlXPtIGZwoPiyu2w==
+=N/if
 -----END PGP SIGNATURE-----
